--- a/app_pandas01.ipynb
+++ b/app_pandas01.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "3   4  d"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,6 +266,228 @@
     "# 딕셔너리의 키 s1, s2는 데이터 프레임의 열의 이름이 된다. \n",
     "df = pd.DataFrame({'s1': sr1, 's2': sr2})\n",
     "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리로 데이터 프레임 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이름</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>홍길동</td>\n",
+       "      <td>95</td>\n",
+       "      <td>87</td>\n",
+       "      <td>85</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>김철수</td>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
+       "      <td>98</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>이영희</td>\n",
+       "      <td>98</td>\n",
+       "      <td>96</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>김민지</td>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>25</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>조윤정</td>\n",
+       "      <td>65</td>\n",
+       "      <td>92</td>\n",
+       "      <td>89</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    이름  국어  영어  수학  과학\n",
+       "0  홍길동  95  87  85  98\n",
+       "1  김철수  98  55  98  50\n",
+       "2  이영희  98  96  88  88\n",
+       "3  김민지  85  89  25  85\n",
+       "4  조윤정  65  92  89  95"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    '이름': ['홍길동', '김철수', '이영희' , '김민지', '조윤정'],\n",
+    "    '국어': [95, 98, 98, 85, 65],\n",
+    "    '영어': [87, 55, 96, 89, 92],\n",
+    "    '수학': [85, 98, 88, 25, 89],\n",
+    "    '과학': [98, 50, 88, 85, 95]    \n",
+    "})\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 데이터 index, columns 넣어 프레임 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>홍길동</th>\n",
+       "      <td>95</td>\n",
+       "      <td>87</td>\n",
+       "      <td>85</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김철수</th>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
+       "      <td>98</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>이영희</th>\n",
+       "      <td>98</td>\n",
+       "      <td>96</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>김민지</th>\n",
+       "      <td>85</td>\n",
+       "      <td>89</td>\n",
+       "      <td>25</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>조윤정</th>\n",
+       "      <td>65</td>\n",
+       "      <td>92</td>\n",
+       "      <td>89</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     국어  영어  수학  과학\n",
+       "홍길동  95  87  85  98\n",
+       "김철수  98  55  98  50\n",
+       "이영희  98  96  88  88\n",
+       "김민지  85  89  25  85\n",
+       "조윤정  65  92  89  95"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    '국어': [95, 98, 98, 85, 65],\n",
+    "    '영어': [87, 55, 96, 89, 92],\n",
+    "    '수학': [85, 98, 88, 25, 89],\n",
+    "    '과학': [98, 50, 88, 85, 95]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data, \n",
+    "                  index=['홍길동', '김철수', '이영희' , '김민지', '조윤정'], \n",
+    "                  columns=['국어', '영어', '수학', '과학'])\n",
     "df"
    ]
   }
